# MyCP_libraries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: gnuplot_i.h  integrate.h  mygnuplot.h  numerov.h  print_routines.h  zeros_newton.h
include/FFT_routines/: direct_wrappers.h  radial.h
include/differential_eq/: numerov.h  runge_kutta.h  verlet.h
include/linear_algebra/: array_routines.h  blas_wrappers.h
include/numerical_methods/: bisection.h  derivate.h  integrate.h  minimum.h  zeros_newton.h
src/: CMakeLists.txt  Config.cmake.in  gnuplot_i.c  integrate.c  minimum.c  mygnuplot.c  print_routines.c
src/FFT_routines/: direct_wrappers.c  radial.c
src/differential_eq/: numerov.c  verlet.c
src/linear_algebra/: array_routines.c  blas_wrappers.c  lapack_wrappers.c
src/numerical_methods/: bisection.c  derivate.c  integrate.c  minimum.c  zeros_newton.c
